--- a/themes/cactus/languages/en.yml
+++ b/themes/cactus/languages/en.yml
@@ -1,9 +1,9 @@
 nav:
   home: Home
   about: About
-  articles: Writing
-  tag: Tag
-  category: Category
+  articles: Posts
+  tag: Tags
+  category: Categories
   projects: Projects
   search: Search
 
