--- a/source/_posts/010-art.md
+++ b/source/_posts/010-art.md
@@ -1,8 +1,8 @@
 ---
 title: 过去的一些绘画 (procreate人物篇)
 date: 2022-11-08 19:55:18
-tags: [drawings, digital art]
-categories: [art]
+tags: [art, digital art]
+categories: [hobby]
 ---
 
 如题。往后应该不会常画。以此纪念我热爱美丽的心灵。
