--- a/source/_posts/011-art.md
+++ b/source/_posts/011-art.md
@@ -1,8 +1,8 @@
 ---
 title: 过去的一些绘画 (手绘篇)
 date: 2022-11-08 20:13:18
-tags: [drawings, watercolor]
-categories: [art]
+tags: [art, watercolor]
+categories: [hobby]
 ---
 
 如题。往后应该不会常画。以此纪念我热爱美丽的心灵。
