--- a/source/_posts/012-anime2022.md
+++ b/source/_posts/012-anime2022.md
@@ -2,7 +2,7 @@
 title:  2022年看的动漫(持续更新中～)
 date: 2022-11-11 
 tags: [anime]
-categories:  [review]
+categories:  [reviews]
 ---
 
 
@@ -10,7 +10,6 @@ categories:  [review]
 Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
 <span style="float:right">-- F.F.</span>
 </blockquote>
-
 
 
 ### Finished/Watching
@@ -26,14 +25,16 @@ Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
 - 魔法少女伊莉雅剧场版：好看，很多刀，看完立马emo。
 - 新石纪龙水：只有两集，应该是特别篇。期待一下！
 - 异世界舅舅： 用辛酸来搞笑。很有意思，和现在比较多的异世界动画有所不同。
+- 电锯人：马趴继巨人之后再次让我失望。
 
 不想再看一遍了
-- 打工吧魔王大人2：童年回忆，第一季好像是初中看的。当时看来逆穿越这种题材非常新颖。这一季作画透露出了平穷。
+- 打工吧魔王大人2：童年回忆，第一季好像是初中看的。当时看来逆穿越这种题材非常新颖。这一季作画透露出了贫穷。
 - 作为女主角：还ok, 有点尬。
 - 辉夜大小姐3：还ok, 剧情有点迷惑，特别是早坂和会长那部分。
 - 里亚徳录大陆：边看文献边看完了，没什么内容。
 - 作为恶役大小姐就该养魔王：This is the kind of trash I like.
 - 两不疑: 挺好看的。
+- 名侦探柯南万圣节的新娘: 和朋友一起看了。比起之前几部要好很多，但依旧非常柯学。朋友质疑东京没有下水管道。
 
 ### Planning to Watch
 
@@ -41,7 +42,6 @@ Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
 - 夏日重现: 被推荐了。还没看。
 - 至不灭的你2: 想看。看第一季的时候狠狠抑郁了。准备等来年春天看。
 - 灵能百分百3: 准备过一段时间看。不过已经从various sources知道了有关小酒窝的事:(
-- 名侦探柯南万圣节的新: 约了和朋友一起看。
 - 女子警察的逆袭：这个剧版看完了，过段时间看动漫版。
 
 
