--- a/source/_posts/009-art.md
+++ b/source/_posts/009-art.md
@@ -2,7 +2,7 @@
 title: 过去的一些绘画 (procreate场景及动物篇)
 date: 2022-11-08 19:45:18
 tags: [art, digital art]
-categories: [hobby]
+categories: [hobbies]
 ---
 
 如题。往后应该不会常画。以此纪念我热爱美丽的心灵。
