--- a/source/_posts/012-anime2022.md
+++ b/source/_posts/012-anime2022.md
@@ -1,15 +1,20 @@
 ---
 title:  2022年看的动漫(持续更新中～)
-date: 2022-11-11 
+date: 2022-11-17
 tags: [anime]
 categories:  [reviews]
 ---
 
+2022-11-17 更新了一下这两周补的番。另外是迟了快一个月的贺猎人漫画再连载。
 
-<blockquote cite="https://jojo.fandom.com/wiki/Foo_Fighters" style="background:#b5d4e6; padding: 10px; padding-top: 15px; padding-bottom:15px; border-radius:5px;">
+<hr>
+
+
+<blockquote cite="https://jojo.fandom.com/wiki/Foo_Fighters">
 Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
-<span style="float:right">-- F.F.</span>
+<span style="float:right"> F.F.</span>
 </blockquote>
+
 
 
 ### Finished/Watching
@@ -21,7 +26,7 @@ Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
 - Overlord4: 正常发挥。依旧是骨傲天和空气斗智斗勇的一季呢嘿嘿。
 - 莉可丽丝：啊，老婆们，美丽的老婆们！
 - JOJO PART 6 STONE OCEAN: FOO FIGHTER！不要死呜呜呜！狠狠和浮游生物共感了。
-- 入间同学入魔了3: 我喜欢！是可以笑着看下去的。有家教那味。
+- 入间同学入魔了3: 我喜欢! 是可以笑着看下去的。有家教那味。
 - 魔法少女伊莉雅剧场版：好看，很多刀，看完立马emo。
 - 新石纪龙水：只有两集，应该是特别篇。期待一下！
 - 异世界舅舅： 用辛酸来搞笑。很有意思，和现在比较多的异世界动画有所不同。
@@ -35,20 +40,21 @@ Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
 - 作为恶役大小姐就该养魔王：This is the kind of trash I like.
 - 两不疑: 挺好看的。
 - 名侦探柯南万圣节的新娘: 和朋友一起看了。比起之前几部要好很多，但依旧非常柯学。朋友质疑东京没有下水管道。
+- 新人炼金术师的店铺：又一篇异世界题材作品。剧情偏爽文套路。
 
 ### Planning to Watch
 
 - BLEACH千年血战：有生之年啊。就算是垃圾也会看，更何况算是优秀作品。小学和初中的时候很喜欢。当时在信息技术课上和同学一起看来着。记得有个女生超喜欢蓝染哈哈哈哈。我喜欢露琪亚，小白，乌尔奇奥拉，狗狗队长，还有总队长哈哈哈哈哈哈哈。没忍住看了两集，但是准备攒起来过段时间一口气看完。
 - 夏日重现: 被推荐了。还没看。
 - 至不灭的你2: 想看。看第一季的时候狠狠抑郁了。准备等来年春天看。
-- 灵能百分百3: 准备过一段时间看。不过已经从various sources知道了有关小酒窝的事:(
+- 灵能百分百3: 准备过一段时间看。不过已经从various sources知道了有关小酒窝的事
 - 女子警察的逆袭：这个剧版看完了，过段时间看动漫版。
 
 
 ### Dropped/Not Planning to Finish
 
 - 食锈末世录：好看的，看了一半之后忙起来就忘了。写这篇博客才想起来。是自古红蓝出cp。
-- 巨人4: 看不下去。过了一年还是没办法接受漫画结局。每次一看到艾伦就想到最后几话，食之无味，弃之可惜。希望谏山创未来有一天能突然给我们一个更好的结局。
+- 巨人4: 看不下去。过了一年还是没办法接受漫画结局。什么至两千年以后的你，怕不是至从初中开始到现在依旧对这部作品怀有感情的大冤种我自己。每次一看到艾伦就想到最后几话，食之无味，弃之可惜。希望谏山创未来有一天能突然给我们一个更好的结局。帕拉迪岛的希望终究还是绝望。
 - 蔷薇王的葬列：看到一半我以为完结了，后来一看竟然还有一半。有各种BL/BG/GB配对，剧情没怎么看懂，感觉有点意识流。一开始以为理查和亨利是一对，结果没过多久亨利就无了？？？白金汉有点香。有机会可以看完。
 - 后宫之乌: 没看之前以为是什么国产动漫，看了一集发现其实是日漫。有点彩云国的感觉。
 - 名侦探柯南犯人先生：挺好笑的但是没必要看。
