--- a/source/_posts/012-anime2022.md
+++ b/source/_posts/012-anime2022.md
@@ -1,11 +1,11 @@
 ---
 title:  2022年看的动漫(持续更新中～)
-date: 2022-11-17
+date: 2022-11-22
 tags: [anime]
 categories:  [reviews]
 ---
 
-2022-11-17 更新了一下这两周补的番。另外是迟了快一个月的贺猎人漫画再连载。
+2022-11-22 开始看致不灭的你2。
 
 <hr>
 
@@ -31,6 +31,7 @@ Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
 - 新石纪龙水：只有两集，应该是特别篇。期待一下！
 - 异世界舅舅： 用辛酸来搞笑。很有意思，和现在比较多的异世界动画有所不同。
 - 电锯人：马趴继巨人之后再次让我失望。
+- 至不灭的你2: 看第一季的时候狠狠抑郁了。本来准备等来年春天看，但是发现子安武人是cv，就没忍住看了。子安武人果然没有让我失望，又配了一个奇怪的角色。每一集都是刀。
 
 不想再看一遍了
 - 打工吧魔王大人2：童年回忆，第一季好像是初中看的。当时看来逆穿越这种题材非常新颖。这一季作画透露出了贫穷。
@@ -46,7 +47,6 @@ Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
 
 - BLEACH千年血战：有生之年啊。就算是垃圾也会看，更何况算是优秀作品。小学和初中的时候很喜欢。当时在信息技术课上和同学一起看来着。记得有个女生超喜欢蓝染哈哈哈哈。我喜欢露琪亚，小白，乌尔奇奥拉，狗狗队长，还有总队长哈哈哈哈哈哈哈。没忍住看了两集，但是准备攒起来过段时间一口气看完。
 - 夏日重现: 被推荐了。还没看。
-- 至不灭的你2: 想看。看第一季的时候狠狠抑郁了。准备等来年春天看。
 - 灵能百分百3: 准备过一段时间看。不过已经从various sources知道了有关小酒窝的事
 - 女子警察的逆袭：这个剧版看完了，过段时间看动漫版。
 
