--- a/source/_posts/012-anime2022.md
+++ b/source/_posts/012-anime2022.md
@@ -4,18 +4,14 @@ date: 2022-11-10
 updated: 2022-11-22
 tags: [anime]
 categories:  [reviews]
-descriptions: 2022年看的所有当年新番总汇。在年底前会一直更新。
+description: 2022年看的所有当年新番总汇。在年底前会一直更新。
 ---
 
-2022-11-22 开始看致不灭的你2。
-
-<hr>
 
 
-<blockquote cite="https://jojo.fandom.com/wiki/Foo_Fighters">
+{% blockquote F.F. %}
 Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
-<span style="float:right"> F.F.</span>
-</blockquote>
+{% endblockquote  %}
 
 
 
@@ -44,6 +40,7 @@ Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
 - 两不疑: 挺好看的。
 - 名侦探柯南万圣节的新娘: 和朋友一起看了。比起之前几部要好很多，但依旧非常柯学。朋友质疑东京没有下水管道。
 - 新人炼金术师的店铺：又一篇异世界题材作品。剧情偏爽文套路。
+- 我要成为影之强者：是我不配，看到脚趾扣地。
 
 ### Planning to Watch
 
