--- a/source/_posts/012-anime2022.md
+++ b/source/_posts/012-anime2022.md
@@ -1,7 +1,7 @@
 ---
 title:  2022年看的动漫(持续更新中～)
 date: 2022-11-10
-updated: 2022-12-01
+updated: 2022-12-08
 tags: [anime]
 categories:  [reviews]
 description: 2022年看的所有当年新番总汇。在年底前会一直更新。
@@ -46,8 +46,9 @@ Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
 
 - BLEACH千年血战：有生之年啊。就算是垃圾也会看，更何况算是优秀作品。小学和初中的时候很喜欢。当时在信息技术课上和同学一起看来着。记得有个女生超喜欢蓝染哈哈哈哈。我喜欢露琪亚，小白，乌尔奇奥拉，狗狗队长，还有总队长哈哈哈哈哈哈哈。没忍住看了两集，但是准备攒起来过段时间一口气看完。
 - 夏日重现: 被推荐了。还没看。
-- 灵能百分百3: 准备过一段时间看。不过已经从various sources知道了有关小酒窝的事
+- 灵能百分百3: 准备过一段时间看。不过已经从various sources知道了有关小酒窝的事。
 - 女子警察的逆袭：这个剧版看完了，过段时间看动漫版。
+- 孤独摇滚：想等到开心的时候再看。
 
 
 ### Dropped/Not Planning to Finish
