--- a/source/_posts/028-anime2023.md
+++ b/source/_posts/028-anime2023.md
@@ -23,17 +23,16 @@ description: 2023年看的所有当年新番总汇。在年底前会一直更新
 ## 正在看
 
 - 冰属性男子与酷酷女同事：甜甜魔幻风现代爱情喜剧
-- 英雄王，为了穷尽武道而转生～而后成为世界最强见习骑士♀～：名字实在记不住， wiki上复制了，英雄王老爷爷转生美少女，好像之前听人讲过来着，算是可以不带脑子看的
-- 转生公主与天才千金的魔法革命：今年一月的异世界番迷之不错？对我就是爱看美女联手干翻世界。
+- 英雄王，为了穷尽武道而转生～而后成为世界最强见习骑士♀～：名字实在记不住， wiki上复制了，英雄王老爷爷转生美少女，好像之前听人讲过来着，算是可以不带脑子看的。比起同期的其他几部异世界番能明显看出作画的贫穷
+- 转生公主与天才千金的魔法革命：今年一月的异世界番迷之不错？对我就是爱看美女联手干翻世界
 - 小智是女孩啦！：救命这好傻，但是为什么看的停不下来！
-- 
+- 拥有超常技能的异世界流浪美食家：又一部异世界，馋哭
 
 ## 准备看
 
 - 冰海战记：今年想连着1把这部从头到尾看一遍
 - 中国奇谈：有点害怕会不会恐怖，抓个幸运儿一起看
-- 因为太怕痛就全点防御力了第二季：看过1，异世界无脑爽文，改天看
 
 ## DROPPED
 
-- 
+- 因为太怕痛就全点防御力了第二季：看过1，异世界无脑爽文
