--- a/source/_posts/019-pr.md
+++ b/source/_posts/019-pr.md
@@ -1,8 +1,8 @@
 ---
-title: 不放假也要听歌，放假更要听歌
+title: 时不时的听歌有感2
 date: 2022-11-27
 updated: 2022-11-27
-tags: [music, thoughts]
+tags: [music, thoughts, 听歌有感]
 categories: [enjoy]
 description: 最近听的一些歌。RHCP, Deca Joins, Pink Floyd, 还有惘闻。
 ---
