--- a/source/_posts/024.md
+++ b/source/_posts/024.md
@@ -1,8 +1,8 @@
 ---
-title: 以前爱听的歌现在也会觉得好听
+title: 时不时的听歌有感3
 date: 2022-12-19
 updated: 2022-12-21
-tags: [thoughts]
+tags: [thoughts, 听歌有感]
 categories: [enjoy]
 description: 近畿小子我的音乐之神。
 ---
