--- a/source/_posts/029.md
+++ b/source/_posts/029.md
@@ -7,9 +7,9 @@ categories:  [enjoy]
 
 下午四点半，体感零下10摄氏度，我上完课正走回家。脸很痛 -- 风吹的痛，最近颞下颌关节紊乱也有犯，早上特别痛，下午稍微好点。
 
-心态很崩。与其说项目毫无进展，不如说根本不知道在干什么。 大概是天太冷了吧，最近车也发动不了，让我产生了卖掉它的欲望。上课也不顺利，感觉老师自己提高了壳的prereq，但是大家都是照着registrar的信息选课的，谁又能想到这课的要求这么高呢？同时也在挣扎暑假回家之后要不要去找个实习，一边害怕从来没找过实习会不会不顺利，一边又觉得不找实习以后真的找不到工作了，另一方面还觉得三年了，好不容易回一次家，就应该放开去玩，玩得仿佛这三年没发生过一样。
+心态很崩。与其说项目毫无进展，不如说根本不知道在干什么。 大概是天太冷了吧，最近车也发动不了，让我产生了卖掉它的欲望。上课也不顺利，感觉老师自己提高了课的prereq，但是大家都是照着registrar的信息选课的，谁又能想到这课的要求这么高呢？同时也在挣扎暑假回家之后要不要去找个实习，一边害怕从来没找过实习会不会不顺利，一边又觉得不找实习以后真的找不到工作了，另一方面还觉得三年了，好不容易回一次家，就应该放开去玩，玩得仿佛这三年没发生过一样。
 
-这几周真的是走着走着路都要哭出声来的状态了，但是这两天有些好转。今天收到了可爱的书、手办、和猫猫box。我爱朋友们。
+这两天状态有些许的好转。今天收到了可爱的书、手办、和猫猫box。我爱朋友们。
 
  
 <hr>
