--- a/source/_posts/028-anime2023.md
+++ b/source/_posts/028-anime2023.md
@@ -1,7 +1,7 @@
 ---
 title:  2023年看的动漫(更新中～)
 date: 2023-01-16
-updated: 2023-01-29
+updated: 2023-03-18
 tags: [anime]
 categories:  [reviews]
 description: 2023年看的所有当年新番总汇。在年底前会一直更新。
@@ -14,7 +14,8 @@ description: 2023年看的所有当年新番总汇。在年底前会一直更新
 
 ## 看完并且可以重温
 
-一月新番才刚开始播，看完再来吧
+海贼王剧场版UTA：歌好听！香克斯帅啊啊啊啊啊啊啊啊啊啊啊啊！
+居然part3上：比上一季强很多，感觉mappa有在好好做。
 
 ## 看完并且可以重温
 
@@ -27,6 +28,9 @@ description: 2023年看的所有当年新番总汇。在年底前会一直更新
 - 拥有超常技能的异世界流浪美食家：又一部异世界，馋哭
 - 反派大小姐与实况转播：可
 - 为了养老金去异世界存八百万：还行
+- 异世界悠闲农家：忽略掉后宫元素之后还行
+- 解雇黑暗士兵慢生活：好狗血
+
 
 ## 准备看
 
