--- a/source/_posts/028-anime2023.md
+++ b/source/_posts/028-anime2023.md
@@ -15,7 +15,7 @@ description: 2023年看的所有当年新番总汇。在年底前会一直更新
 ## 看完并且可以重温
 
 海贼王剧场版UTA：歌好听！香克斯帅啊啊啊啊啊啊啊啊啊啊啊啊！
-居然part3上：比上一季强很多，感觉mappa有在好好做。
+巨人part3上：比上一季强很多，感觉mappa有在好好做。
 
 ## 看完并且可以重温
 
