--- a/source/_posts/010-art.md
+++ b/source/_posts/010-art.md
@@ -4,6 +4,7 @@ date: 2022-11-08 19:55:18
 updated: 2022-11-08
 tags: [art, digital art]
 categories: [enjoy]
+cover: d9.JPG
 ---
 
 如题。往后应该不会常画。以此纪念我热爱美丽的心灵。
