--- a/source/_posts/011-art.md
+++ b/source/_posts/011-art.md
@@ -4,6 +4,7 @@ date: 2022-11-08 20:13:18
 updated: 2022-11-08
 tags: [art, watercolor]
 categories: [enjoy]
+cover: d26.JPG
 ---
 
 如题。往后应该不会常画。以此纪念我热爱美丽的心灵。
