--- a/source/_posts/034.md
+++ b/source/_posts/034.md
@@ -1,8 +1,10 @@
 ---
 title: AoT最终季
-date: 2023-03-5
+date: 2023-03-05
+updated: 2023-03-05
 tags: [anime]
 categories:  [enjoy]
+description: 从2013至今，历经十年终于完成了进击的巨人这部作品对我的洗礼。一些看法。
 ---
 
 {% blockquote %}
