--- a/source/_posts/009-art.md
+++ b/source/_posts/009-art.md
@@ -9,10 +9,10 @@ cover: d18.jpg
 
 如题。往后应该不会常画。以此纪念我热爱美丽的心灵。
 
-![d7](d7.JPG)
+![d7](d7.jpg)
 ![d18](d18.jpg)
-![d14](d14.JPG)
+![d14](d14.jpg)
 ![d17](d17.jpg)
-![d12](d12.JPG)
-![d15](d15.JPG)
-![d13](d13.JPG)
+![d12](d12.jpg)
+![d15](d15.jpg)
+![d13](d13.jpg)
