--- a/source/_posts/011-art.md
+++ b/source/_posts/011-art.md
@@ -4,18 +4,18 @@ date: 2022-11-08 20:13:18
 updated: 2022-11-08
 tags: [art, watercolor]
 categories: [enjoy]
-cover: d26.JPG
+cover: d26.jpg
 ---
 
 如题。往后应该不会常画。以此纪念我热爱美丽的心灵。
 
-![d23](d23.JPG)
-![d24](d24.JPG)
-![d25](d25.JPG)
-![d26](d26.JPG)
-![d27](d27.JPG)
-![d28](d28.JPG)
-![d29](d29.JPG)
-![d30](d30.JPG)
-![d31](d31.JPG)
-![d32](d32.JPG)
+![d23](d23.jpg)
+![d24](d24.jpg)
+![d25](d25.jpg)
+![d26](d26.jpg)
+![d27](d27.jpg)
+![d28](d28.jpg)
+![d29](d29.jpg)
+![d30](d30.jpg)
+![d31](d31.jpg)
+![d32](d32.jpg)
