--- a/source/_posts/010-art.md
+++ b/source/_posts/010-art.md
@@ -4,21 +4,21 @@ date: 2022-11-08 19:55:18
 updated: 2022-11-08
 tags: [art, digital art]
 categories: [enjoy]
-cover: d9.JPG
+cover: d9.jpg
 ---
 
 如题。往后应该不会常画。以此纪念我热爱美丽的心灵。
 
-![d4](d4.JPG)
-![d5](d5.JPG)
-![d6](d6.JPG)
-![d8](d8.JPG)
-![d9](d9.JPG)
-![d10](d10.JPG)
-![d11](d11.JPG)
+![d4](d4.jpg)
+![d5](d5.jpg)
+![d6](d6.jpg)
+![d8](d8.jpg)
+![d9](d9.jpg)
+![d10](d10.jpg)
+![d11](d11.jpg)
 ![d19](d19.jpg)
 ![d20](d20.jpg)
 ![d21](d21.jpg)
 ![d22](d22.jpg)
-![d2](d2.JPG)
-![d3](d3.JPG)
+![d2](d2.jpg)
+![d3](d3.jpg)
