--- a/source/_posts/034.md
+++ b/source/_posts/034.md
@@ -5,6 +5,7 @@ updated: 2023-03-05
 tags: [anime]
 categories:  [enjoy]
 description: 从2013至今，历经十年终于完成了进击的巨人这部作品对我的洗礼。一些看法。
+cover: d17.jpg
 ---
 
 {% blockquote %}
