--- a/source/_posts/028-anime2023.md
+++ b/source/_posts/028-anime2023.md
@@ -1,27 +1,30 @@
 ---
-title:  2023年看的动漫(更新中～)
+title:  动漫全收集计划
 date: 2023-01-16
 updated: 2023-03-18
 tags: [anime]
 categories:  [enjoy]
-description: 2023年看的所有当年新番总汇。在年底前会一直更新。
+description: 当然也不是什么都看的全收集
+cover: anime.png
 ---
+
+## 2023
 
 2023-01-16: 总感觉上一秒还在妈妈开车的时候躲在后座看家庭教师(我的天，2013年！我愿意回到那一年)，下一秒就在和T讨论巨人的迷之结局(2021年4月，我也愿意回到这时候)，再下一秒已经是2023年，放寒假，人生没什么希望，明天很漫长，但是还可以继续看动漫。
 
 <hr>
 
 
-## 看完并且可以重温
+### 看完并且可以重温
 
 海贼王剧场版UTA：歌好听！香克斯帅啊啊啊啊啊啊啊啊啊啊啊啊！
 巨人part3上：比上一季强很多，感觉mappa有在好好做。
 
-## 看完并且可以重温
+### 看完并且可以重温
 
 一月新番才刚开始播，看完再来吧
 
-## 正在看
+### 正在看
 
 - 冰属性男子与酷酷女同事：甜甜魔幻风现代爱情喜剧
 - 转生公主与天才千金的魔法革命：今年一月的异世界番迷之不错？对我就是爱看美女联手干翻世界
@@ -32,7 +35,7 @@ description: 2023年看的所有当年新番总汇。在年底前会一直更新
 - 解雇黑暗士兵慢生活：好狗血
 
 
-## 准备看
+### 准备看
 
 - 冰海战记：今年想连着1把这部从头到尾看一遍
 - 中国奇谈：有点害怕会不会恐怖，抓个幸运儿一起看
@@ -43,3 +46,70 @@ description: 2023年看的所有当年新番总汇。在年底前会一直更新
 - 因为太怕痛就全点防御力了第二季：看过1，异世界无脑爽文
 - 英雄王，为了穷尽武道而转生～而后成为世界最强见习骑士♀～：名字实在记不住， wiki上复制了，英雄王老爷爷转生美少女，好像之前听人讲过来着，算是可以不带脑子看的。比起同期的其他几部异世界番能明显看出作画的贫穷
 - 小智是女孩啦！：越看越不喜欢
+
+## 2022
+
+
+{% blockquote F.F. %}
+Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
+{% endblockquote  %}
+
+
+
+### Finished/Watching
+
+可以重温
+
+- 瓦尼塔斯的手记2: 好看！基情满满。
+- 间谍过家家1&2: 阿尼亚可可爱爱，顺便看黄昏&约尔撒狗粮。拯救世界(x)过家家(✓)
+- Overlord4: 正常发挥。依旧是骨傲天和空气斗智斗勇的一季呢嘿嘿。
+- 莉可丽丝：啊，老婆们，美丽的老婆们！
+- JOJO PART 6 STONE OCEAN: FOO FIGHTER！不要死呜呜呜！狠狠和浮游生物共感了。
+- 入间同学入魔了3: 我喜欢! 是可以笑着看下去的。有家教那味。
+- 魔法少女伊莉雅剧场版：好看，很多刀，看完立马emo。
+- 新石纪龙水：只有两集，应该是特别篇。期待一下！
+- 异世界舅舅： 用辛酸来搞笑。很有意思，和现在比较多的异世界动画有所不同。
+- 电锯人：马趴继巨人之后再次让我失望。
+- 至不灭的你2: 看第一季的时候狠狠抑郁了。本来准备等来年春天看，但是发现子安武人是cv，就没忍住看了。子安武人果然没有让我失望，又配了一个奇怪的角色。每一集都是刀。
+
+不想再看一遍了
+- 打工吧魔王大人2：童年回忆，第一季好像是初中看的。当时看来逆穿越这种题材非常新颖。这一季作画透露出了贫穷。
+- 作为女主角：还ok, 有点尬。
+- 辉夜大小姐3：还ok, 剧情有点迷惑，特别是早坂和会长那部分。
+- 里亚徳录大陆：边看文献边看完了，没什么内容。
+- 作为恶役大小姐就该养魔王：This is the kind of trash I like.
+- 两不疑: 挺好看的。
+- 名侦探柯南万圣节的新娘: 和朋友一起看了。比起之前几部要好很多，但依旧非常柯学。朋友质疑东京没有下水管道。
+- 新人炼金术师的店铺：又一篇异世界题材作品。剧情偏爽文套路。
+- 我要成为影之强者：是我不配，看到脚趾扣地。
+
+### Planning to Watch
+
+- BLEACH千年血战：有生之年啊。就算是垃圾也会看，更何况算是优秀作品。小学和初中的时候很喜欢。当时在信息技术课上和同学一起看来着。记得有个女生超喜欢蓝染哈哈哈哈。我喜欢露琪亚，小白，乌尔奇奥拉，狗狗队长，还有总队长哈哈哈哈哈哈哈。没忍住看了两集，但是准备攒起来过段时间一口气看完。
+- 夏日重现: 被推荐了。还没看。
+- 灵能百分百3: 准备过一段时间看。不过已经从various sources知道了有关小酒窝的事。
+- 女子警察的逆袭：这个剧版看完了，过段时间看动漫版。
+- 孤独摇滚：想等到开心的时候再看。
+
+
+### Dropped/Not Planning to Finish
+
+- 食锈末世录：好看的，看了一半之后忙起来就忘了。写这篇博客才想起来。是自古红蓝出cp。
+- 巨人4: 看不下去。过了一年还是没办法接受漫画结局。什么至两千年以后的你，怕不是至从初中开始到现在依旧对这部作品怀有感情的大冤种我自己。每次一看到艾伦就想到最后几话，食之无味，弃之可惜。希望谏山创未来有一天能突然给我们一个更好的结局。帕拉迪岛的希望终究还是绝望。
+- 蔷薇王的葬列：看到一半我以为完结了，后来一看竟然还有一半。有各种BL/BG/GB配对，剧情没怎么看懂，感觉有点意识流。一开始以为理查和亨利是一对，结果没过多久亨利就无了？？？白金汉有点香。有机会可以看完。
+- 后宫之乌: 没看之前以为是什么国产动漫，看了一集发现其实是日漫。有点彩云国的感觉。
+- 名侦探柯南犯人先生：挺好笑的但是没必要看。
+- 自称贤者弟子的贤者：meh。
+
+去年听了很多Trash Taste, 今年没怎么关注这三个动漫博主了。以前喜欢看LexBurner的动漫解说，现在也不怎么看了。但是还不想从动漫毕业。希望能保持。
+
+
+
+
+
+
+
+
+
+
+
