--- a/source/_posts/035.md
+++ b/source/_posts/035.md
@@ -1,7 +1,7 @@
 ---
-title: 
-date: 2023-03-05
-updated: 2023-03-05
+title: dynamic network
+date: 2023-10-09
+updated: 2023-10-09
 tags: [network]
 categories:  [project]
 description:  do a literature review of dynamic social network models
