--- a/source/_posts/009-art.md
+++ b/source/_posts/009-art.md
@@ -7,7 +7,7 @@ categories: [enjoy]
 cover: d18.png
 ---
 
-如题。往后应该不会常画。以此纪念我热爱美丽的心灵。
+如题。往后应该不会常画。以此纪念我热爱美丽的心灵
 
 ![d7](d7.png)
 ![d18](d18.png)
@@ -15,4 +15,4 @@ cover: d18.png
 ![d17](d17.png)
 ![d12](d12.png)
 ![d15](d15.png)
-![d13](d13.png)
+![d13](d13.png) 
