--- a/source/_posts/028-anime2023.md
+++ b/source/_posts/028-anime2023.md
@@ -1,45 +1,57 @@
 ---
 title:  动漫全收集计划
 date: 2023-01-16
-updated: 2023-03-18
+updated: 2023-10-12
 tags: [anime]
 categories:  [enjoy]
 description: 当然也不是什么都看的全收集
 cover: anime.png
 ---
 
-## 2023
-
-2023-01-16: 总感觉上一秒还在妈妈开车的时候躲在后座看家庭教师(我的天，2013年！我愿意回到那一年)，下一秒就在和T讨论巨人的迷之结局(2021年4月，我也愿意回到这时候)，再下一秒已经是2023年，放寒假，人生没什么希望，明天很漫长，但是还可以继续看动漫。
+前言: 总感觉上一秒还在妈妈开车的时候躲在后座看家庭教师(我的天，2013年！我愿意回到那一年)，下一秒就在和T讨论巨人的迷之结局(2021年4月，我也愿意回到这时候)，再下一秒已经是2023年，放寒假，人生没什么希望，明天很漫长，但是还可以继续看动漫。
 
 <hr>
 
+## 2023
 
-### 看完并且可以重温
 
-海贼王剧场版UTA：歌好听！香克斯帅啊啊啊啊啊啊啊啊啊啊啊啊！
-巨人part3上：比上一季强很多，感觉mappa有在好好做。
+##### 看完并且可以重温
 
-### 看完并且可以重温
+- 海贼王剧场版UTA：歌好听！香克斯帅啊啊啊啊啊啊啊啊啊啊啊啊！
+- 巨人part3上：比上一季强很多，感觉mappa有在好好做。
+- 拥有超常技能的异世界流浪美食家：又一部异世界，馋哭
+- Dr.Stone 3: 依旧精彩！
+- 我推的孩子：精彩
+- 为美好的世界献上爆焰：笑着看完
 
-一月新番才刚开始播，看完再来吧
 
-### 正在看
+##### 看完不想再看
+
+- 辉夜大小姐忘记第几季了：食之无味，弃之可惜，好想在吃美式中餐一样
+- 打工吧！魔王大人：这波属于为了情怀看完了，怎么说，还不如停在多年前的第一季
+- 鬼灭锻刀村：动画制作依旧顶级，剧情依旧一般（个人意见）
+
+
+##### 正在看
+
+
+##### 没看下去
 
 - 冰属性男子与酷酷女同事：甜甜魔幻风现代爱情喜剧
 - 转生公主与天才千金的魔法革命：今年一月的异世界番迷之不错？对我就是爱看美女联手干翻世界
-- 拥有超常技能的异世界流浪美食家：又一部异世界，馋哭
-- 反派大小姐与实况转播：可
+- 反派大小姐与实况转播：emm
 - 为了养老金去异世界存八百万：还行
-- 异世界悠闲农家：忽略掉后宫元素之后还行
+- 异世界悠闲农家：emm
 - 解雇黑暗士兵慢生活：好狗血
+- 咒术回战
 
 
 ### 准备看
 
 - 冰海战记：今年想连着1把这部从头到尾看一遍
 - 中国奇谈：有点害怕会不会恐怖，抓个幸运儿一起看
-- 文豪野犬第四季
+- 文豪野犬4/5
+- 葬送的芙丽莲
 
 ## DROPPED
 
@@ -49,16 +61,7 @@ cover: anime.png
 
 ## 2022
 
-
-{% blockquote F.F. %}
-Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
-{% endblockquote  %}
-
-
-
-### Finished/Watching
-
-可以重温
+##### 看完并且可以重温
 
 - 瓦尼塔斯的手记2: 好看！基情满满。
 - 间谍过家家1&2: 阿尼亚可可爱爱，顺便看黄昏&约尔撒狗粮。拯救世界(x)过家家(✓)
@@ -72,7 +75,8 @@ Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
 - 电锯人：马趴继巨人之后再次让我失望。
 - 至不灭的你2: 看第一季的时候狠狠抑郁了。本来准备等来年春天看，但是发现子安武人是cv，就没忍住看了。子安武人果然没有让我失望，又配了一个奇怪的角色。每一集都是刀。
 
-不想再看一遍了
+##### 看完了不想再看了
+
 - 打工吧魔王大人2：童年回忆，第一季好像是初中看的。当时看来逆穿越这种题材非常新颖。这一季作画透露出了贫穷。
 - 作为女主角：还ok, 有点尬。
 - 辉夜大小姐3：还ok, 剧情有点迷惑，特别是早坂和会长那部分。
@@ -83,7 +87,7 @@ Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
 - 新人炼金术师的店铺：又一篇异世界题材作品。剧情偏爽文套路。
 - 我要成为影之强者：是我不配，看到脚趾扣地。
 
-### Planning to Watch
+##### 计划看
 
 - BLEACH千年血战：有生之年啊。就算是垃圾也会看，更何况算是优秀作品。小学和初中的时候很喜欢。当时在信息技术课上和同学一起看来着。记得有个女生超喜欢蓝染哈哈哈哈。我喜欢露琪亚，小白，乌尔奇奥拉，狗狗队长，还有总队长哈哈哈哈哈哈哈。没忍住看了两集，但是准备攒起来过段时间一口气看完。
 - 夏日重现: 被推荐了。还没看。
@@ -92,7 +96,7 @@ Look at me Jolyne. This is my 'spirit'... This is my 'intellect'... I was alive.
 - 孤独摇滚：想等到开心的时候再看。
 
 
-### Dropped/Not Planning to Finish
+##### 看不下去
 
 - 食锈末世录：好看的，看了一半之后忙起来就忘了。写这篇博客才想起来。是自古红蓝出cp。
 - 巨人4: 看不下去。过了一年还是没办法接受漫画结局。什么至两千年以后的你，怕不是至从初中开始到现在依旧对这部作品怀有感情的大冤种我自己。每次一看到艾伦就想到最后几话，食之无味，弃之可惜。希望谏山创未来有一天能突然给我们一个更好的结局。帕拉迪岛的希望终究还是绝望。
