--- a/source/_posts/035.md
+++ b/source/_posts/035.md
@@ -1,10 +1,95 @@
 ---
-title: dynamic network
-date: 2023-10-09
-updated: 2023-10-09
-tags: [network]
-categories:  [project]
-description:  do a literature review of dynamic social network models
+title: R Package/Web App for Statistical Power Analysis of Moderated Mediation Models
+date: 2023-10-12
+updated: 2023-10-12
+tags: [power analysis, mediation, simulation]
+categories:  [projects]
+description:  Moderated mediation models have been quite widely used, but there is currently a lack of statistical software to plan sample size for studies that use such models. This project aims to implement such a tool in the WebPower R package and also in a web app. 
+hidden: false
+cover: examplepower.png
 ---
 
-:o
+##### R package WebPower
+
+I had the pleasure to contribute to building tools for sample size planning for moderated mediation analysis as part of the R package [WebPower](https://cran.r-project.org/web/packages/WebPower/index.html). Uppon loading this package in R, one can conduct power analysis for Models 7, 8, 14, 15, and 58 as mentioned in the book Introduction to Mediation, Moderation, and Conditional Process Analysis by Andrew F. Hayes. Correspondingly, R functions `wp.modmed.m7, wp.modmed.m8, wp.modmed.m14, wp.modmed.m15, wp.modmed.m58` can be used for such analysis. 
+
+Using model 7 as an example, the code can be used below to find out power when sample size $n = 100$. The function returns statistical power for the indirect effect, direct effect, and moderation effect.
+
+```r
+?wp.modmed.m7
+wp.modmed.m7(n = 100, 
+             a1 = 0.33, 
+             cp = 0.311, 
+             b1 = 0.777,
+             c1 = -0.079,
+             c2 = 0.081, 
+             sigx_w = 0.5,
+             nrep = 1000,
+             alpha = 0.05, 
+             simulation_method = "MC",
+             power_method = "product",
+             MCrep = 1000, 
+             sige12 = 1,
+             sige22 = 1,
+             ncore = 1))
+```
+
+When conducting power analysis, one can test power at different sample sizes and then plot sample sizes versus power to find out at what sample size, power would reach a desirable level.
+
+```r
+
+# get power at a sequence of sample sizes
+res <- sapply(n <- seq(50, 1500, 20), 
+              function(x) wp.modmed.m7(n = x,
+                            a1 = 0.33, 
+                            cp = 0.311, 
+                            b1 = 0.777,
+                            c1 = -0.079,
+                            c2 = 0.081, 
+                            sigx_w = 0.5,
+                            nrep = 1000,
+                            alpha = 0.05, 
+                            simulation_method = "MC",
+                            power_method = "product",
+                            MCrep = 1000, 
+                            sige12 = 1,
+                            sige22 = 1,
+                            ncore = 5))
+
+ind.eff <- sapply(c(1:73), function(x) res[,x]$power1)
+dir.eff <- sapply(c(1:73), function(x) res[,x]$power2)
+mod.eff <- sapply(c(1:73), function(x) res[,x]$power3)
+
+ind.df <- data.frame("power" = ind.eff, 
+                    "n" = seq(50, 1500, 20),
+                    "effect" = "indirect")
+dir.df <- cbind("power" = dir.eff, 
+                    "n" = seq(50, 1500, 20), 
+                    "effect" = "direct")
+mod.df <- cbind("power" = mod.eff, 
+                "n" = seq(50, 1500, 20),
+                "effect" = "mod")
+df <- rbind(ind.df, dir.df, mod.df)
+
+
+ggplot(data = df, aes(x = as.numeric(n), 
+            y = as.numeric(power), 
+            group = effect, 
+            color = effect)) +  
+  geom_line() +
+  xlab("n") +
+  ylab("power") +
+  geom_hline(yintercept = 0.8, linetype="dashed", 
+        color = "black") +
+  theme(panel.background = element_rect(fill = "white", 
+        colour = "gray"))
+```
+
+
+ A plot like this can be drawn.
+
+![](examplepower.png)
+
+##### Web App
+
+Besides the R package, functions are also implemented on the WebPower website for [Model 7](https://webpower.psychstat.org/models/modmed7/), [Model 8](https://webpower.psychstat.org/models/modmed8/), [Model 14](https://webpower.psychstat.org/models/modmed14/), [Model 15](https://webpower.psychstat.org/models/modmed15/), and [Model 58](https://webpower.psychstat.org/models/modmed58/).
