--- a/source/_posts/028-anime2023.md
+++ b/source/_posts/028-anime2023.md
@@ -1,5 +1,5 @@
 ---
-title:  动漫全收集计划
+title:  新番全收集计划
 date: 2023-01-16
 updated: 2023-10-12
 tags: [anime]
@@ -14,7 +14,6 @@ cover: anime.png
 
 ## 2023
 
-
 ##### 看完并且可以重温
 
 - 海贼王剧场版UTA：歌好听！香克斯帅啊啊啊啊啊啊啊啊啊啊啊啊！
@@ -23,7 +22,6 @@ cover: anime.png
 - Dr.Stone 3: 依旧精彩！
 - 我推的孩子：精彩
 - 为美好的世界献上爆焰：笑着看完
-
 
 ##### 看完不想再看
 
@@ -44,8 +42,7 @@ cover: anime.png
 - 英雄王，为了穷尽武道而转生～而后成为世界最强见习骑士♀～：名字实在记不住， wiki上复制了，英雄王老爷爷转生美少女，好像之前听人讲过来着，算是可以不带脑子看的。比起同期的其他几部异世界番能明显看出作画的贫穷
 - 小智是女孩啦！：越看越不喜欢
 
-
-##### 准备看
+##### 计划看
 
 - 冰海战记：今年想连着1把这部从头到尾看一遍
 - 中国奇谈：有点害怕会不会恐怖，抓个幸运儿一起看
