--- a/source/_posts/035.md
+++ b/source/_posts/035.md
@@ -9,7 +9,7 @@ hidden: false
 cover: examplepower.png
 ---
 
-##### R package WebPower
+#### R package WebPower
 
 I had the pleasure to contribute to building tools for sample size planning for moderated mediation analysis as part of the R package [WebPower](https://cran.r-project.org/web/packages/WebPower/index.html). Uppon loading this package in R, one can conduct power analysis for Models 7, 8, 14, 15, and 58 as mentioned in the book Introduction to Mediation, Moderation, and Conditional Process Analysis by Andrew F. Hayes. Correspondingly, R functions `wp.modmed.m7, wp.modmed.m8, wp.modmed.m14, wp.modmed.m15, wp.modmed.m58` can be used for such analysis. 
 
@@ -90,6 +90,6 @@ ggplot(data = df, aes(x = as.numeric(n),
 
 ![](examplepower.png)
 
-##### Web App
+#### Web App
 
 Besides the R package, functions are also implemented on the WebPower website for [Model 7](https://webpower.psychstat.org/models/modmed7/), [Model 8](https://webpower.psychstat.org/models/modmed8/), [Model 14](https://webpower.psychstat.org/models/modmed14/), [Model 15](https://webpower.psychstat.org/models/modmed15/), and [Model 58](https://webpower.psychstat.org/models/modmed58/).
