--- a/source/_posts/028-anime2023.md
+++ b/source/_posts/028-anime2023.md
@@ -1,7 +1,7 @@
 ---
 title:  新番全收集计划
 date: 2023-01-16
-updated: 2023-10-12
+updated: 2024-09-08
 tags: [anime]
 categories:  [enjoy]
 description: 当然也不是什么都看的全收集
@@ -11,6 +11,29 @@ cover: anime.png
 前言: 总感觉上一秒还在妈妈开车的时候躲在后座看家庭教师(我的天，2013年！我愿意回到那一年)，下一秒就在和T讨论巨人的迷之结局(2021年4月，我也愿意回到这时候)，再下一秒已经是2023年，放寒假，人生没什么希望，明天很漫长，但是还可以继续看动漫。
 
 <hr>
+
+[我的动漫评分](https://myanimelist.net/animelist/iasnobmatsu)
+
+## 2024
+ 
+##### 看了好看
+
+- 我推的孩子第二季：虽然大家反响不如之前但意外的喜欢
+- 妖精的尾巴百年任务：看了四集，还行
+- 转生史莱姆3: 小说看了，动漫还行
+- 杀手预言：动漫剧情很有意思，但一开始确实是因为刚田准一很帅才看的XD
+- 为美好的世界献上祝福3：一如既往
+- 黑执事寄宿学校篇：只能给个情怀分
+- 鬼灭柱训练：一般
+- 迷宫饭：今年最喜欢的。喜欢马鹿喜欢森西喜欢妹宝。很纯粹。
+- 物理魔法师马修2: 很好笑。
+- 青之驱魔师岛根篇：给个情怀分。
+
+##### 看了但不咋好看
+- 异世界悠闲纪行：报看
+- 转生成七王子魔法blabla：一般
+- 魔法学院的劣等生：看了一集没绷住
+- 转生贵族靠鉴定技能发家：报看
 
 ## 2023
 
